<resources>
    <string name="app_name">User List</string>
    <string name="affirmation1">
        Name: Mohammad Joynul Abedin \n
        ID: 30040 \n
        Blood Group: AB+
    </string>
    <string name="affirmation2">
        Name: Raian Ibn Faiz \n
        ID: 30035 \n
        Blood Group: O+
    </string>
    <string name="affirmation3">
        Name: Ihsan Md.Al Aqib \n
        ID: 30049 \n
        Blood Group: O-
    </string>
    <string name="affirmation4">
        Name: Samiun Rahman Sizan \n
        ID: 30036 \n
        Blood Group: B+
    </string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_email">Enter Email..</string>
    <string name="enter_password">Enter Password..</string>
    <string name="login">Login</string>
    <string name="don_t_have_and_account">Don\'t have and Account?</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="mobile">Mobile..</string>
    <string name="dob">DOB</string>
    <string name="password">Password..</string>
    <string name="confirm_password">Confirm Password..</string>
    <string name="send_mail">Send Mail</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_message">Enter Message...</string>
    <string name="send">Send</string>
</resources>